--- a/html-review/index.html
+++ b/html-review/index.html
@@ -192,6 +192,33 @@
 
 
         </fieldset>
+        <fieldset>
+            <legend>Do you have pets?</legend>
+            <p>
+                <input type="checkbox" name="pet" id="dog" value="dog">
+                <label for="dog">dog</label>
+            </p>
+            <p>
+                <input type="checkbox" name="pet" id="cat" value="cat">
+                                <label for="cat">cat</label>
+
+            </p>
+            <p>
+                <input type="checkbox" name="pet" id="fish" value="fish">
+                                                <label for="fish">fish</label>
+
+            </p>
+        </fieldset>
+        <fieldset>
+            <legend>Send me a notes</legend>
+            <label for="message">your message:</label>
+            <textarea name="message" id="message" cols="30" rows="10" placeholder="type your message here"></textarea>
+        </fieldset>
+        <button type="submit">submit</button>
+                <button type="submit"formaction="https://httpbin.org/post" formmethod="post">post</button>
+
+                <button type="reset">reset</button>
+
     </form>
 </article>
 </main>
