--- a/css/index.html
+++ b/css/index.html
@@ -11,5 +11,8 @@
     <!-- <p style="color:blue">css</p> -->
     <h1>title</h1>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi officiis odit sequi temporibus quidem suscipit et voluptas. Sit, saepe quam. Sunt maiores libero, eligendi maxime reprehenderit labore laudantium voluptate cupiditate.</p>
+    <ol start="3" reversed>
+        <li value="26">1</li>
+    </ol>
 </body>
 </html>
